--- a/init.org
+++ b/init.org
@@ -1560,8 +1560,9 @@ Lars Tveito's excellent [[https://github.com/larstvei/dot-emacs/blob/master/init
      horizontal rules.
 
      #+BEGIN_SRC emacs-lisp
-       (dolist (mode '(clojure-mode clojurec-mode clojurescript-mode clojurex-mode))
-         (cl-pushnew mode page-break-lines-modes))
+       (with-eval-after-load 'page-break-lines
+         (dolist (mode '(clojure-mode clojurec-mode clojurescript-mode clojurex-mode))
+           (cl-pushnew mode page-break-lines-modes)))
 
        (global-page-break-lines-mode)
      #+END_SRC
