Set `tab-width` to 4

--- a/init.org
+++ b/init.org
@@ -10,89 +10,90 @@
 # See: https://github.com/larstvei/dot-emacs/blob/master/init.org
 
 * Table of Contents							:TOC:
- - [[#introduction][Introduction]]
- - [[#meta][Meta]]
-   - [[#tangling][Tangling]]
-   - [[#automatic-tangling][Automatic tangling]]
- - [[#package-management][Package Management]]
- - [[#utils][Utils]]
-   - [[#requires][Requires]]
-   - [[#doc-pop-up][Doc pop-up]]
- - [[#configurations][Configurations]]
-   - [[#about-emacs][About Emacs]]
-   - [[#about-me][About Me]]
-   - [[#aggressive-indent][Aggressive Indent]]
-   - [[#blog][Blog]]
-   - [[#buffer][Buffer]]
-   - [[#clojure][Clojure]]
-   - [[#comint][Comint]]
-   - [[#comment][Comment]]
-   - [[#common-lisp][Common Lisp]]
-   - [[#company][Company]]
-   - [[#compilation][Compilation]]
-   - [[#css][CSS]]
-   - [[#cursor][Cursor]]
-   - [[#default-functionality][Default Functionality]]
-   - [[#default-major-mode][Default Major Mode]]
-   - [[#dired][Dired]]
-   - [[#discover-my-major][Discover My Major]]
-   - [[#ediff][Ediff]]
-   - [[#edit-server][Edit Server]]
-   - [[#elisp][Elisp]]
-   - [[#emmet][Emmet]]
-   - [[#eshell][Eshell]]
-   - [[#expand-region][Expand Region]]
-   - [[#font][Font]]
-   - [[#fill-column][Fill Column]]
-   - [[#frame][Frame]]
-   - [[#fringe][Fringe]]
-   - [[#helm][Helm]]
-   - [[#helm-dash][Helm Dash]]
-   - [[#helm-descbinds][Helm Descbinds]]
-   - [[#info][Info]]
-   - [[#javascript][JavaScript]]
-   - [[#keyboard-macro][Keyboard Macro]]
-   - [[#latex][LaTeX]]
-   - [[#line-and-column-numbers][Line and Column Numbers]]
-   - [[#macros][Macros]]
-   - [[#magit][Magit]]
-   - [[#markdown][Markdown]]
-   - [[#menubar-and-toolbar][Menubar and Toolbar]]
-   - [[#mode-line][Mode Line]]
-   - [[#modes][Modes]]
-   - [[#multiple-cursors][Multiple Cursors]]
-   - [[#octave][Octave]]
-   - [[#open][Open]]
-   - [[#org][Org]]
-   - [[#pages][Pages]]
-   - [[#pdf-tools][PDF Tools]]
-   - [[#performance][Performance]]
-   - [[#popwin][Popwin]]
-   - [[#prettify-symbols][Prettify Symbols]]
-   - [[#projectile][Projectile]]
-   - [[#quit][Quit]]
-   - [[#sass][Sass]]
-   - [[#scheme][Scheme]]
-   - [[#scratch-buffer][Scratch Buffer]]
-   - [[#scroll][Scroll]]
-   - [[#search-and-replace][Search and Replace]]
-   - [[#sexp][Sexp]]
-   - [[#sgml][SGML]]
-   - [[#shell][Shell]]
-   - [[#smartparens][Smartparens]]
-   - [[#spelling][Spelling]]
-   - [[#splash-screen][Splash Screen]]
-   - [[#terminal-mode][Terminal Mode]]
-   - [[#theme][Theme]]
-   - [[#toggle][Toggle]]
-   - [[#whitespace-cleanup][Whitespace Cleanup]]
-   - [[#window-management][Window Management]]
-   - [[#yasnippet][YASnippet]]
- - [[#microsoft-windows][Microsoft Windows]]
-   - [[#keybindings][Keybindings]]
- - [[#mac-osx][Mac OSX]]
-   - [[#keybindings-1][Keybindings]]
- - [[#license][License]]
+- [[#introduction][Introduction]]
+- [[#meta][Meta]]
+  - [[#tangling][Tangling]]
+  - [[#automatic-tangling][Automatic tangling]]
+- [[#package-management][Package Management]]
+- [[#utils][Utils]]
+  - [[#requires][Requires]]
+  - [[#doc-pop-up][Doc pop-up]]
+- [[#configurations][Configurations]]
+  - [[#about-emacs][About Emacs]]
+  - [[#about-me][About Me]]
+  - [[#aggressive-indent][Aggressive Indent]]
+  - [[#blog][Blog]]
+  - [[#buffer][Buffer]]
+  - [[#clojure][Clojure]]
+  - [[#comint][Comint]]
+  - [[#comment][Comment]]
+  - [[#common-lisp][Common Lisp]]
+  - [[#company][Company]]
+  - [[#compilation][Compilation]]
+  - [[#css][CSS]]
+  - [[#cursor][Cursor]]
+  - [[#default-functionality][Default Functionality]]
+  - [[#default-major-mode][Default Major Mode]]
+  - [[#dired][Dired]]
+  - [[#discover-my-major][Discover My Major]]
+  - [[#ediff][Ediff]]
+  - [[#edit-server][Edit Server]]
+  - [[#elisp][Elisp]]
+  - [[#emmet][Emmet]]
+  - [[#eshell][Eshell]]
+  - [[#expand-region][Expand Region]]
+  - [[#font][Font]]
+  - [[#fill-column][Fill Column]]
+  - [[#frame][Frame]]
+  - [[#fringe][Fringe]]
+  - [[#helm][Helm]]
+  - [[#helm-dash][Helm Dash]]
+  - [[#helm-descbinds][Helm Descbinds]]
+  - [[#info][Info]]
+  - [[#javascript][JavaScript]]
+  - [[#keyboard-macro][Keyboard Macro]]
+  - [[#latex][LaTeX]]
+  - [[#line-and-column-numbers][Line and Column Numbers]]
+  - [[#macros][Macros]]
+  - [[#magit][Magit]]
+  - [[#markdown][Markdown]]
+  - [[#menubar-and-toolbar][Menubar and Toolbar]]
+  - [[#mode-line][Mode Line]]
+  - [[#modes][Modes]]
+  - [[#multiple-cursors][Multiple Cursors]]
+  - [[#octave][Octave]]
+  - [[#open][Open]]
+  - [[#org][Org]]
+  - [[#pages][Pages]]
+  - [[#pdf-tools][PDF Tools]]
+  - [[#performance][Performance]]
+  - [[#popwin][Popwin]]
+  - [[#prettify-symbols][Prettify Symbols]]
+  - [[#projectile][Projectile]]
+  - [[#quit][Quit]]
+  - [[#sass][Sass]]
+  - [[#scheme][Scheme]]
+  - [[#scratch-buffer][Scratch Buffer]]
+  - [[#scroll][Scroll]]
+  - [[#search-and-replace][Search and Replace]]
+  - [[#sexp][Sexp]]
+  - [[#sgml][SGML]]
+  - [[#shell][Shell]]
+  - [[#smartparens][Smartparens]]
+  - [[#spelling][Spelling]]
+  - [[#splash-screen][Splash Screen]]
+  - [[#tabs][Tabs]]
+  - [[#terminal-mode][Terminal Mode]]
+  - [[#theme][Theme]]
+  - [[#toggle][Toggle]]
+  - [[#whitespace-cleanup][Whitespace Cleanup]]
+  - [[#window-management][Window Management]]
+  - [[#yasnippet][YASnippet]]
+- [[#microsoft-windows][Microsoft Windows]]
+  - [[#keybindings][Keybindings]]
+- [[#mac-osx][Mac OSX]]
+  - [[#keybindings-1][Keybindings]]
+- [[#license][License]]
 
 * Introduction
 This is an Emacs configuration file written in Org-mode. It is adapted from
@@ -1923,6 +1924,14 @@ Lars Tveito's excellent [[https://github.com/larstvei/dot-emacs/blob/master/init
     #+BEGIN_SRC emacs-lisp
       (customize-set-variable 'inhibit-splash-screen t)
     #+END_SRC
+
+** Tabs
+
+   - Use 4 spaces by default.
+
+     #+BEGIN_SRC emacs-lisp
+       (setq-default tab-width 4)
+     #+END_SRC
 
 ** Terminal Mode
    - Do not use =yasnippet= in =term-mode=.
