Get old input correctly for Eshell
Always move to the last prompt to get its input. Otherwise, whatever is on
cursor's current line is preserved.

--- a/init.org
+++ b/init.org
@@ -911,6 +911,7 @@ Lars Tveito's excellent [[https://github.com/larstvei/dot-emacs/blob/master/init
        (defun *-eshell-clear ()
          "Clear `eshell' buffer, comint-style."
          (interactive)
+         (goto-char (point-max))
          (let ((input (eshell-get-old-input)))
            (eshell/clear-scrollback)
            (eshell-emit-prompt)
